<resources>
    <string name="app_name">Recipe</string>
    <string name="msg_welcome">Welcome to our Application </string>
    <string name="txt_calories"><b>Calories</b></string>
    <string name="txt_carbos"><b>Carbos</b></string>
    <string name="txt_description"><b>Decription</b></string>
    <string name="txt_name"><b>Name</b></string>
    <string name="txt_difficulty"><b>Difficulty</b></string>
    <string name="txt_fats"><b>Fats</b></string>
    <string name="txt_headline"><b>Headline</b></string>
    <string name="txt_proteins"><b>Proteins</b></string>
    <string name="txt_time"><b>Time</b></string>
    <string name="txt_sortbycalories">Sort by Calories</string>
    <string name="txt_sortbyfat">Sort by Fat</string>
    <string name="msg_nointernetconnection">Sorry!! No Internet Connection</string>
</resources>
