<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayoutContentClientOffer"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:orientation="vertical" >

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/tab_clientoffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_name"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipenameitem"
                    ></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_calories"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipecaloriesitem"
                    ></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_carbos"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipecarositem"></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_description"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipedescitem"></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_difficulty"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipediffitem"></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_headline"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipeheadlineitem"></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_fats"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipefatsitem"></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_proteins"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipeproteinsitem"></TextView>
            </TableRow>
            <TableRow android:paddingTop="20dp" android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_time"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtrecipetimeitem"></TextView>
            </TableRow>


        </TableLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>